// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Launcher component when agents are available renders 1`] = `
<div
  className="Launcher"
>
  <div>
    <ChatContainer
      hidden={true}
    />
    <ToggleChatButton
      chatOpen={false}
      toggleChat={[Function]}
    />
  </div>
</div>
`;

exports[`Launcher component when agents are not available renders 1`] = `
<div
  className="Launcher"
>
  <NoAgentsAvailable />
</div>
`;
